--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <title>My test page</title>
   </head>
   <body>
-    <h1>Welcom to firefox</h1>
+    <h1>Welcome to firefox</h1>
     <img src="images/firefox-icon.png" alt="firefox logo">
+    <p>At Mozilla, we’re a global community of</p>
+    <ul>
+	     <li>technologists</li>
+	      <li>thinkers</li>
+	       <li>builders</li>
+    </ul>
+    <p>working together ... </p>
   </body>
 </html>
