--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
     <title>My test page</title>
   </head>
   <body>
-    <h1>Welcome to firefox</h1>
+    <h1>Mozilla is cool</h1>
     <img src="images/firefox-icon.png" alt="firefox logo">
+
     <p>At Mozilla, we’re a global community of</p>
+
     <ul>
 	     <li>technologists</li>
 	      <li>thinkers</li>
 	       <li>builders</li>
     </ul>
-    <p>working together ... </p>
+
+    <p>working together to keep the Internet alive and accessible, so people world wide can be informed contributors and creators of the Web. We believe this act of human collaboration across and open platform is essential to individual growth and our collective future.</p>
+
+    <p>Read the <a href ="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
   </body>
 </html>
